src/objects/part__c.object
<CustomObject>
    <fields>
        <fullName>city__c</fullName>
        <label>city</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>color__c</fullName>
        <label>color</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>part_number__c</fullName>
        <label>part_number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>weight__c</fullName>
        <label>weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>part</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>part Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>